welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: overriding method getMondeHauteur in class AbstractBuggle of type ()Int;
 method getMondeHauteur needs `override' modifier
def getMondeHauteur():Int = 
    ^